Profile --> profile functions fix

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -134,8 +134,7 @@
             <form id="output-form" class="" action="/dashboard" method="post" onsubmit="event.preventDefault();">
                 <textarea class=" readonly-input" name="valueList" id="valueList" rows="10" cols="50" readonly>
                 </textarea>
-                <button class="submit-output" name="submit-button" onclick="toggleSubmitButton()"
-                    type="submit">Submit</button>
+                <button class="submit-output" name="submit-button" onclick="toggleSubmitButton()"type="submit">Submit</button>
             </form>
         </div>
 
